--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "**/Thumbs.db": true,
     "**/.retool_types/**": true,
     ".cache": true,
-    "retool.config.json": true
+    "retool.config.json": true,
+    "**/*tsconfig.json": true
   },
   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
