--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "**/.retool_types/**": true,
     ".cache": true,
     "retool.config.json": true,
+    "**/*tsconfig.json": true
   },
   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
