--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build --turbo",
     "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start",
