--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
@@ -69,6 +70,7 @@
     "@types/node": "^22.16.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
     "postcss": "^8.5.6",
     "supabase": "^2.30.4",
     "tailwindcss": "^4.1.11",
